[r329] fix libmaix_nn link c++

--- a/components/libmaix/lib/arch/r329/src/libmaix_nn_decoder/CMakeLists.txt
+++ b/components/libmaix/lib/arch/r329/src/libmaix_nn_decoder/CMakeLists.txt
@@ -31,9 +31,7 @@ target_link_libraries(
 
 set_target_properties(maix_nn_decoder PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${export_dir}/lib/arch/r329")
 
-
-# set_target_properties(maix_image PROPERTIES LINK_FLAGS "-Wl,-rpath,/usr/local/lib/python3.9/dist-packages/maix/")
-
+set_target_properties(maix_nn_decoder PROPERTIES LINK_FLAGS "-Wl,-rpath,/usr/local/lib/python3.9/dist-packages/maix/")
 
 # add_custom_command(
 #         # POST_BUILD 处 有三个值可选
