[ax620] support display.

--- a/components/maix_cv_image/CMakeLists.txt
+++ b/components/maix_cv_image/CMakeLists.txt
@@ -27,6 +27,21 @@ if(CONFIG_COMPONENT_IMAGE_ENABLE)
             "/usr/lib/x86_64-linux-gnu/libopencv_core.so"
             "/usr/lib/x86_64-linux-gnu/libopencv_freetype.so"
         )
+    elseif(CONFIG_ARCH_AX620)
+        include_directories(/usr/include/opencv4)
+        include_directories(/usr/local/include/opencv4)
+        append_srcs_dir(ADD_SRCS "lib/arch/ax620/libmaix_utils")
+        append_srcs_dir(ADD_SRCS "lib/arch/ax620/libmaix_image")
+        append_srcs_dir(ADD_SRCS "lib/arch/ax620/libmaix_cam")
+        append_srcs_dir(ADD_SRCS "lib/arch/ax620/libmaix_disp")
+        list(APPEND ADD_DYNAMIC_LIB
+            "/lib/arm-linux-gnueabihf/libopencv_videoio.so"
+            "/lib/arm-linux-gnueabihf/libopencv_highgui.so"
+            "/lib/arm-linux-gnueabihf/libopencv_imgcodecs.so"
+            "/lib/arm-linux-gnueabihf/libopencv_imgproc.so"
+            "/lib/arm-linux-gnueabihf/libopencv_core.so"
+            "/lib/arm-linux-gnueabihf/libopencv_freetype.so"
+        )
     elseif(CONFIG_ARCH_V831)
         include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../libmaix/lib/arch/v83x/include/opencv4)
         list(APPEND ADD_DYNAMIC_LIB
